--- a/src/sass/_commons.scss
+++ b/src/sass/_commons.scss
@@ -5,31 +5,176 @@ h3 {
     font-weight: 400;
 
     &.large-heading {
-        font-size: responsive 2rem 5rem;
+        font-size: responsive 2.5rem 5rem;
         font-range: 500px 1171px;
     }
 
     &.small-heading {
-        font-size: responsive 1rem 3.5rem;
+        font-size: responsive 1.5rem 3.5rem;
         font-range: 500px 1171px;
     }
 }
 
+// Links
 a {
     color: $text-color;
     text-decoration: none;
 }
 
+// Header
 header {
     position: fixed;
     width: 100%;
 }
 
+// Secondary text
 .text-secondary {
     color: $secondary-color;
 }
 
+// Main section
 main {
     padding: 3rem;
     min-height: calc(100vh - 60px);
+}
+
+// Menu button
+.menu-button {
+    position: absolute;
+    z-index:2;
+    cursor: pointer;
+    top: 2rem;
+    right: 2rem;
+    @include easeOut();
+
+    .button-line {
+        height: 3px;
+        background: $text-color;
+        margin: 0 0 5px 0;
+        @include easeOut();
+        &.first-line {
+            width: 30px;
+        }
+        &.second-line {
+            width: 20px;
+        }
+        &.third-line {
+            width: 25px;
+        }
+    }
+
+    &:hover .button-line {
+        width: 30px;
+        background: $secondary-color;
+    }
+
+
+    // Rotate into X with menu lines
+    &.close {
+        transform: rotate(180deg);
+
+        .button-line {
+            width: 30px;
+            // Line 1 -> rotate
+            &:nth-child(1) {
+                transform: rotate(45deg) translate(5px, 5px);
+            }
+            // Line 2 -> hide
+            &:nth-child(2) {
+                opacity: 0;
+            }
+            // Line 3 -> Rotate
+            &:nth-child(3) {
+                transform: rotate(-45deg) translate(7px, -6px);
+            }
+        }
+    }
+}
+
+// Menu
+.menu {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    visibility: hidden;
+    display: flex;
+
+    &.show {
+        visibility: visible;
+    }
+
+    &-brand,
+    &-nav {
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+        justify-content: center;
+        flex-basis: 50%;
+        height: 100vh;
+        overflow: hidden;
+    }
+
+    &-nav {
+        background: darken($primary-color-dark, 5);
+        list-style: none;
+        transform: translate3d(0, -100%, 0);
+        @include easeOut();
+        &.show {
+            // slide in from the top
+            transform: translate3d(0, 0, 0);
+            opacity: 0.7;
+        }
+    }
+    &-brand {
+        background: $primary-color-dark;
+        transform: translate3d(0, 100%, 0);
+        @include easeOut();
+        &.show {
+            // slide in from the bottom
+            transform: translate3d(0, 0, 0);
+            opacity: 0.9;
+        }
+        .portrait {
+            width: 250px;
+            height: 250px;
+            background: url('../images/portrait.png');
+            border-radius: 50%;
+            border: solid 3px $secondary-color;
+        }
+    }
+    .nav-item {
+        transform: translate3d(600px, 0, 0);
+        @include easeOut();
+
+        &.show {
+            // slide in from the right
+            transform: translate3d(0, 0, 0);
+        }
+
+        &.current > a {
+            color: $secondary-color;
+        }
+
+        .nav-link {
+            display: inline-block;
+            font-size: 2rem;
+            text-transform: uppercase;
+            padding: 1rem 0;
+            font-weight: 400;
+            color: lighten($text-color, 50);
+            text-decoration: none;
+            @include easeOut();
+
+            &:hover {
+                color: $secondary-color;
+            }
+        }
+    }
+}
+
+// Delay each nav item slide
+@for $x from 1 through 4 {
+    .nav-item:nth-child(#{$x}) {
+        transition-delay: $x * 0.12s;
+    }
 }
