Add Contact button.

--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -3,6 +3,7 @@ $primary-color: linear-gradient(to right, #141e30, #243b55);
 $primary-color-dark: #141e30;
 $text-color: #ecf0f1;
 $secondary-color: #f1c40f;
+$button-color: #16a085;
 $home-image: url('../images/background-home.jpeg');
 $background-opacity: 0.9;
 
