--- a/src/sass/_commons.scss
+++ b/src/sass/_commons.scss
@@ -41,7 +41,7 @@ main {
 // Menu button
 .menu-button {
     position: absolute;
-    z-index:2;
+    z-index: 5;
     cursor: pointer;
     top: 2rem;
     right: 2rem;
@@ -52,12 +52,15 @@ main {
         background: $text-color;
         margin: 0 0 5px 0;
         @include easeOut();
+
         &.first-line {
             width: 30px;
         }
+
         &.second-line {
             width: 20px;
         }
+
         &.third-line {
             width: 25px;
         }
@@ -75,14 +78,17 @@ main {
 
         .button-line {
             width: 30px;
+
             // Line 1 -> rotate
             &:nth-child(1) {
                 transform: rotate(45deg) translate(5px, 5px);
             }
+
             // Line 2 -> hide
             &:nth-child(2) {
                 opacity: 0;
             }
+
             // Line 3 -> Rotate
             &:nth-child(3) {
                 transform: rotate(-45deg) translate(7px, -6px);
@@ -98,9 +104,9 @@ main {
     width: 100%;
     visibility: hidden;
     display: flex;
-
     &.show {
         visibility: visible;
+        z-index: 3;
     }
 
     &-brand,
@@ -119,21 +125,25 @@ main {
         list-style: none;
         transform: translate3d(0, -100%, 0);
         @include easeOut();
+
         &.show {
             // slide in from the top
             transform: translate3d(0, 0, 0);
             opacity: 0.7;
         }
     }
+
     &-brand {
         background: $primary-color-dark;
         transform: translate3d(0, 100%, 0);
         @include easeOut();
+
         &.show {
             // slide in from the bottom
             transform: translate3d(0, 0, 0);
-            opacity: 0.9;
+            opacity: 0.95;
         }
+
         .portrait {
             width: 250px;
             height: 250px;
@@ -142,6 +152,7 @@ main {
             border: solid 3px $secondary-color;
         }
     }
+
     .nav-item {
         transform: translate3d(600px, 0, 0);
         @include easeOut();
@@ -151,7 +162,7 @@ main {
             transform: translate3d(0, 0, 0);
         }
 
-        &.current > a {
+        &.current>a {
             color: $secondary-color;
         }
 
@@ -177,4 +188,55 @@ main {
     .nav-item:nth-child(#{$x}) {
         transition-delay: $x * 0.12s;
     }
+}
+
+.button {
+    font-size: 1.4rem;
+    padding: .8rem 0;
+    text-align: center;
+    cursor: pointer;
+    outline: none;
+    background-color: $button-color;
+    border: none;
+    border-radius: 10px;
+    margin-top: 1.5rem;
+    width: 200px;
+    box-shadow: 5px 5px 15px #000;
+    transition: all 0.3s ease-in-out;
+
+    span {
+        color: $text-color;
+        text-transform: capitalize;
+        position: relative;
+        z-index: 2;
+        @include easeOut();
+    }
+
+    i {
+        position: absolute;
+        opacity: 0;
+        top: 4px;
+        right: -5px;
+        @include easeOut();
+    }
+
+    &:hover {
+        background-color: $secondary-color;
+
+        span {
+            padding-right: 2rem;
+        }
+
+        i {
+            opacity: 1;
+            right: 0;
+        }
+    }
+
+    &:active {
+        background-color: $secondary-color;
+        // box-shadow: 5px 1px 15px #000;
+        transform: translateX(10px) translateY(10px);
+    }
+
 }
